option(
	'image_dpi',
	type: 'integer',
	value: 96,
	description: 'The DPI at which to export the SVG files into PNGs'
)

option(
	'scsi_did',
	type: 'integer',
	min: 0, max: 255,
	value: 1,
	description: 'The SCSI Device ID'
)

option(
	'enable_uart',
	type: 'boolean',
	value: true,
	description: 'Enable the debut UART'
)

option(
	'uart_baud',
	type: 'combo',
	choices: [
		'50', '75', '110', '134', '150', '200', '300',
		'600', '1200', '1800', '2400', '4800', '9600',
		'19200', '28800', '38400', '57600', '76800',
		'115200', '230400', '460800', '576000', '921600'
	],
	value: '9600',
	description: 'The rate to run the debug UART'
)

option(
	'uart_data_bits',
	type: 'combo',
	choices: [
		'5', '6', '7', '8', '9'
	],
	value: '8',
	description: 'The data bits to use for the UART'
)

option(
	'uart_parity',
	type: 'combo',
	choices: [
		'none', 'mark', 'space',
		'even', 'odd'
	],
	value: 'none',
	description: 'The parity mode for the debug UART'
)

option(
	'taperipper',
	type: 'boolean',
	value: true,
	description: 'Enable the meson targets for taperipper support'
)
