# SPDX-License-Identifier: BSD-3-Clause
[project]
dynamic         = [ 'version' ]
name            = 'squishy'
description     = 'SCSI Multitool and Torii HDL Library'
authors         = [
	{ name = 'Aki Van Ness', email = 'aki@lethalbit.net' }
]
license         = 'BSD-3-Clause'
license-files   = [
	'LICENSE', 'LICENSE.docs'
]
readme          = 'README.md'
requires-python = '>=3.11'
dependencies    = [
	'Jinja2',
	'construct>=2.10.67',
	'arrow',
	'libusb1>=1.8.1',
	'rich',
	'torii>=0.7.7,<1.0',
	'torii-usb>=0.7.1,<1.0',
	'platformdirs~=4.2.1'
]
keywords        = [
	'SCSI',
	'Torii',
	'HDL',
	'retro computing',
	'legacy computing',
	'archivist tool',
	'hardware interface',
]
classifiers     = [
	'Development Status :: 4 - Beta',

	'Environment :: Console',

	'Intended Audience :: Developers',
	'Intended Audience :: Information Technology',
	'Intended Audience :: System Administrators',

	'Operating System :: MacOS :: MacOS X',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: POSIX :: Linux',

	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',

	'Topic :: Software Development',
	'Topic :: System :: Hardware',
	'Typing :: Typed',
]

[project.optional-dependencies]
dev = [
	'nox',
	'meson',
]

[project.urls]
source        = 'https://github.com/squishy-scsi/squishy'
issues        = 'https://github.com/squishy-scsi/squishy/issues'
documentation = 'https://docs.scsi.moe/'
changelog     = 'https://github.com/squishy-scsi/squishy/blob/main/CHANGELOG.md'

[project.scripts]
squishy = 'squishy.cli:main'

[build-system]
requires = ['setuptools>=66', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']
exclude = [
	'contrib',
	'contrib.*',
	'docs',
	'docs.*',
	'examples',
	'examples.*',
	'tests',
	'tests.*',
]
namespaces = false

[tool.setuptools_scm]
version_scheme = 'guess-next-dev'
local_scheme   = 'node-and-date'

# Testing Coverage
[tool.coverage.run]
branch = true
omit = [
	'*/noxfile.py',
	'*/__main__.py',
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
	':nocov:',
	# Allow defensive code
	'^\s*raise AssertionError\b',
	'^\s*raise NotImplementedError\b',
	'^\s*raise NotImplemented\b',
	'^\s*raise$',
	# Typing-Related
	'^\s*if (False|TYPE_CHECKING):',
	': \.\.\.(\s*#.*)?$',
	'^ +\.\.\.$',
	'''-> ['"]?NoReturn['"]?:''',
	# Skipped/Failed tests
	'^\s*self\.skipTest\b',
	'^\s*self\.fail\b',
]
partial_branches = [
	':nobr:'
]

# Typechecking
[tool.mypy]
warn_return_any     = true
warn_unused_configs = true
check_untyped_defs  = true

[[tool.mypy.overrides]]
module = [
	'construct.*',
	'rich.*',
	'usb1.*',
]
ignore_missing_imports = true

# Code Formatting
[tool.ruff]
cache-dir = 'build/.ruff_cache'
src = [
	'examples', 'tests', 'squishy', 'docs'
]
indent-width = 4
line-length = 120
respect-gitignore = true
target-version = 'py311'

# NOTE(aki):
# We can't use the Ruff formatter as is, and they refuse to add support for single quotes
# on docstring, among some other things, so this is just mostly here for reference.
[tool.ruff.format]
docstring-code-format = true
indent-style = 'tab'
line-ending = 'lf'
# Due to Ruff being stupid and not letting us use `'''` we have to use this
quote-style = 'preserve'

[tool.ruff.lint]
select = ['E', 'F', 'W']
# NOTE(aki):
# Commented out ignores are not supported by Ruff but are by Flake8,
# they are present in `contrib/.flake8`.
ignore = [
	# 'E126', # Continuation line over-indented for hanging indent
	'E201', # Whitespace after '('
	'E202', # Whitespace before ')'
	'E221', # Multiple spaces before operator
	'E241', # Multiple spaces after ','
	'E251', # Unexpected spaces around keyword / parameter equals
	'E261', # At least two spaces before inline comment
	'E272', # Multiple spaces before keyword
	'E302', # Expected 2 blank lines, found n
	'E305', # Expected 2 blank lines after end of function or class
	'W191', # Indentation contains tabs
	# 'W504', # line break after binary operator
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'
inline-quotes  = 'single'
multiline-quotes = 'single'

[tool.ruff.lint.isort]
lines-after-imports = 1
