# SPDX-License-Identifier: BSD-3-Clause
# substrate = dependency(
# 	'substrate',
# 	required: true,
# 	version: '>=0.0.1',
# 	fallback: ['substrate', 'substrate_dep'],
# 	native: true,
# 	default_options: [
# 		'default_library=static',
# 		'build_tests=false',
# 	]
# )

subdir('squish')
subdir('slurp')
